# mysql-slowlog-parser

./: CHANGELOG.md  Cargo.toml  README.md
examples/: iterator.rs
src/: codec.rs  lib.rs  parser.rs  types.rs
