[package]
name = "mysql-slowlog-parser"
version = "0.3.1"
description = "Streaming parser for MySQL slowlogs"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/soulstompp/mysql-slowlog-parser"
documentation = "https://docs.rs/mysql-slowlog-parser/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.26"
winnow = {  version = "0.7.9", features = ["default"] }
winnow_iso8601 = {  version = "0.5.1", features = ["default"]}
winnow_datetime = { version = "0.2.1" }
sqlparser = {version = "0.52.0", features = ["visitor"]}
thiserror = "2.0.3"
log = "0.4.17"
tokio = {version = "1.44.2", features = ["bytes", "fs", "io-std", "io-util", "rt", "rt-multi-thread", "macros"]}
tokio-util = {version = "0.7.14", features = ["codec"]}

[[example]]
name = "iterator"
path = "examples/iterator.rs"
