[package]
name = "mysql-slowlog-parser"
version = "0.4.0"
description = "Streaming parser for MySQL slowlogs"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/soulstompp/mysql-slowlog-parser"
documentation = "https://docs.rs/mysql-slowlog-parser/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.0"
futures = "0.3.31"
winnow = {  version = "0.7.10", features = ["default"] }
winnow_iso8601 = {  version = "0.5.1", features = ["default"]}
winnow_datetime = { version = "0.2.3" }
sqlparser = {version = "0.56.0", features = ["visitor"]}
thiserror = "2.0.12"
log = "0.4.27"
tokio = {version = "1.45.1", features = ["bytes", "fs", "io-std", "io-util", "rt", "rt-multi-thread", "macros"]}
tokio-util = {version = "0.7.15", features = ["codec"]}

[[example]]
name = "iterator"
path = "examples/iterator.rs"
